--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,13 @@ psycopg = {extras = ["binary"], version = "^3.2.3"}
 django-htmx = "^1.21.0"
 django-stubs = {extras = ["compatible-mypy"], version = "^5.1.1"}
 coverage = "^7.6.8"
+httpx = "^0.27.2"
+pydantic = "^2.10.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.8.0"
 mypy = "^1.13.0"
+ipython = "^8.29.0"
 
 [build-system]
 requires = ["poetry-core"]
