--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,14 +9,19 @@ readme = "README.md"
 python = "^3.12"
 django = "^5.1.3"
 python-dotenv = "^1.0.1"
-psycopg = {extras = ["binary"], version = "^3.2.3"}
+psycopg = { extras = ["binary"], version = "^3.2.3" }
 django-htmx = "^1.21.0"
-django-stubs = {extras = ["compatible-mypy"], version = "^5.1.1"}
+django-stubs = { extras = ["compatible-mypy"], version = "^5.1.1" }
 coverage = "^7.6.8"
+httpx = "^0.27.2"
+pydantic = "^2.10.1"
+faker = "^33.0.0"
+polyfactory = "^2.18.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.8.0"
 mypy = "^1.13.0"
+ipython = "^8.29.0"
 
 [build-system]
 requires = ["poetry-core"]
@@ -27,3 +32,16 @@ plugins = ["mypy_django_plugin.main"]
 
 [tool.django-stubs]
 django_settings_module = "hypersky.settings"
+
+[tool.coverage.run]
+omit = [
+    "apps/libs/logger.py",
+    "manage.py",
+    "hypersky/*.py",
+    "**/migrations/*.py",
+    "**/__init__.py",
+    "**/apps.py",
+    "**/admin.py",
+    "**/urls.py",
+    "**/tests.py",
+]
